--- a/src/app/components/menu-options/menu-options.component.scss
+++ b/src/app/components/menu-options/menu-options.component.scss
@@ -29,6 +29,7 @@
         margin: 4px 4px;
         padding: 0px 0px;
         cursor: pointer;
+        top: 15px;
     }
     .button-menu-options:hover{
         //background-color: whitesmoke;
