--- a/src/app/components/prechat-form/prechat-form.component.html
+++ b/src/app/components/prechat-form/prechat-form.component.html
@@ -39,7 +39,7 @@ onFocus="document.querySelector('[start-focus-chat21-prechat-form]').focus()">
 
             <div class="c21-body-container">
 
-                <div class="c21-body-header">
+                <div class="c21-body-header" style="font-size: larger;">
                     <div start-focus-chat21-prechat-form tabindex="1410" class="c21-form-message-field">{{g.LABEL_COMPLETE_FORM}}</div>
                 </div>
 
